# gnobots2-clutter

./: configure.in
blackjack/data/: .cvsignore  Ameristar.rules  Atlantic_City.rules  Makefile.am  Vegas_Downtown.rules  Vegas_Strip.rules  blackjack.desktop.in  blackjack.desktop.in.in  blackjack.schemas.in
blackjack/pixmaps/: Makefile.am  gnome-blackjack.xcf
blackjack/src/: .cvsignore  Makefile.am  blackjack.cpp  blackjack.h  card-selector.cpp  card-selector.h  card.cpp  card.h  chips.cpp  chips.h  dialog.cpp  dialog.h  draw.cpp  draw.h  events.cpp  events.h  game.cpp  game.h  hand.cpp  hand.h  menu.cpp  menu.h  player.cpp  player.h  press_data.cpp  press_data.h  slot.cpp  slot.h  splash.cpp  splash.h  strategy.cpp  strategy.h
dependencies/ggzcore/: Doxyfile  Makefile.am  TODO  conf.c  conf.h  game.c  game.h  gametype.c  gametype.h  ggzcore-ggz.h  ggzcore.h  hook.c  hook.h  init.c  module.c  module.h  net.h  netxml.c  player.c  player.h  protocol.h  room.c  room.h  server.c  server.h  state.c  state.h  table.c  table.h  user.c  user.h
dependencies/ggzdmod/: Doxyfile  Makefile.am  README  ggzdmod-ggz.h  ggzdmod.c  ggzdmod.h  io.c  io.h  mod.h  protocol.h
dependencies/ggzmod/: Doxyfile  Makefile.am  ggzmod.c  ggzmod.h  io.c  io.h  mod.h  protocol.h
dependencies/libggz/: Makefile.am  conf.c  easysock.c  ggz.h  ggz_common.c  ggz_common.h  ggz_dio.c  ggz_dio.h  list.c  memory.c  misc.c  misc.h  msg.c  numberlist.c  stack.c  support.h  xmlelement.c
gataxx/: .cvsignore  AUTHORS  ChangeLog  For_Iagno  Makefile.am  ai.c  ai.h  appbar.c  appbar.h  ataxx.c  ataxx.h  clock.c  gataxx.c  gataxx.desktop  gataxx.desktop.in  gataxx.h  gataxx.schemas  gataxx.schemas.in  gataxx.soundlist  gataxx.soundlist.in  gtkgridboard.c  gtkgridboard.h  gtkgridboard.txt  gtkgridboardthemes.c  gtkgridboardthemes.h  menus.c  menus.h  properties.c  properties.h
gnobots/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  game.c  game.h  gbdefs.h  gnobots.c  gnobots.desktop  gnobots.h  index.html  properties.c  properties.h
gnome-stones/: .cvsignore  ChangeLog  Makefile.am  README  TODO  atari.caves.in  cave.c  cave.h  default.caves  default.caves.in  game.c  game.h  gnome-stones.desktop  gnome-stones.desktop.in  gnome-stones.keys.in  gnome-stones.schemas.in  gnomekoban.caves  gnomekoban.caves.in  io.c  io.h  main.c  main.h  object.c  object.h  player.c  player.h  preferences.c  preferences.h  sound.c  sound.h  status.c  status.h  tutorial.caves  tutorial.caves.in  types.h  view.c  view.h
gnome-stones/graphics/: Makefile.am
gnome-stones/help/: Makefile.am
gnome-stones/objects/: Makefile.am  gnome-stones.c  gnomekoban.c
gnome-stones/sounds/: Makefile.am
gnometris/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  TODO  block-cache.cpp  block-cache.h  blockops-noclutter.cpp  blockops-noclutter.h  blockops.cpp  blockops.h  blocks.cpp  blocks.h  field-noclutter.cpp  field-noclutter.h  field.cpp  field.h  gnome-canvas-pimage.c  gnome-canvas-pimage.h  gnometris.desktop  gnometris.desktop.in  gnometris.desktop.in.in  gnometris.schemas  gnometris.schemas.in  highscores.cpp  highscores.h  main.cpp  preview-noclutter.cpp  preview-noclutter.h  preview.cpp  preview.h  renderer-noclutter.cpp  renderer-noclutter.h  renderer.cpp  renderer.h  scoreframe.cpp  scoreframe.h  sound.cpp  sound.h  tetris.cpp  (+1 more)
gnometris/help/: ChangeLog  ChangeLog.old  Makefile.am
gnometris/pix/: Makefile.am
gnometris/sounds/: Makefile.am
gtetris/: .cvsignore  .cvswrappers  AUTHORS  Makefile  Makefile.am  TODO  blockops.cpp  blockops.h  blocks.cpp  blocks.h  field.h  gtetris.desktop  main.cpp  preview.cpp  preview.h  scoreframe.cpp  scoreframe.h  tetris.cpp  tetris.h
gtetris/pix/: Makefile.am  form.xcf
gturing/: .cvsignore  3ones2zeroes.tur  CREDITS  ChangeLog  Makefile.am  addbin.tur  bin2dec.tur  dec2bin.tur  gturing.c  gturing.desktop  subst.tur  test.tur  turing.c  turing.h
iagno2/: .cvsignore  AUTHORS  Changelog  HACKING  Makefile.am  README  iagno2.desktop  iagno2.desktop.in
iagno2/plugins/: Makefile.am
iagno2/reversi-iagno2/: Makefile.am  reversi.c  reversi.h
iagno2/src/: .cvsignore  Makefile.am  defines.h  iagno2.c  iagno2.h  main.c  main.h  (+6 more)
icons/: Makefile.am
mahjongg/: .cvsignore  ChangeLog  Makefile.am  NEWS  TODO  button-images.h  default.xpm  drawing.c  drawing.h  get_titles.pl  gnome-canvas-pimage.c  gnome-canvas-pimage.h  hborder.xpm  mahjongg.c  mahjongg.desktop  mahjongg.desktop.in  mahjongg.desktop.in.in  mahjongg.h  mahjongg.map  mahjongg.schemas  mahjongg.schemas.in  maps.c  maps.h  seta.xpm  solubility.c  solubility.h  translatable_game_names.h  vborder.xpm
metatris/: .cvsignore  ChangeLog  Makefile.am  metatris.c  metatris.desktop  metatris.h  metatris.theme
phaser-chess/: .cvsignore  ChangeLog  Makefile.am  board_view.h  board_view.m  board_view_pc.h  board_view_pc.m  board_view_ps.h  board_view_ps.m  coord_list.h  coord_list.m  dataflow.fig  enums.h  game_finder.h  game_finder.m  game_info.h  game_info.m  logical_board.h  logical_board.m  logical_board_pc.h  logical_board_pc.m  logical_board_ps.h  logical_board_ps.m  meta_server.h  netcon.h  netcon.m  objc_inc.h  phaser-chess-pieces.xpm  phaser-chess.desktop  phaser-chess.h  phaser-chess.m  startup.pcs  vector.h  vector.m
same-gnome/: .cvsignore  ChangeLog  FEATURES  Makefile.am  Min  TODO  blink-sync.xpm  drawing.c  drawing.h  game.c  game.h  globals.h  input.c  input.h  planets.xpm  puyonew2-sync.xpm  rotate.xpm  same-gnome.c  same-gnome.desktop  same-gnome.desktop.in  same-gnome.desktop.in.in  same-gnome.h  same-gnome.schemas  same-gnome.schemas.in  stones.xpm  ui.c  ui.h
same-gnome-clutter/: Makefile.am  board.js  light.js.in  main.js  same-gnome-clutter-c.desktop.in.in  same-gnome-clutter.in  same-gnome-clutter.schemas.in  same.c  score.js
scottfree/: .cvsignore  ChangeLog  GnomeScott.c  Makefile.am
tests/: Makefile.am
xbill/: .cvsignore  Cable.h  ChangeLog  Game.cc  Game.h  Library.cc  Library.h  MCursor.cc  Makefile.am  Picture.cc  Strings.h  UI.cc  UI.h  menu.h  x11-gtk.cc  x11.cc  x11.h  xbill.desktop  xbill.desktop.in
(+297 files in other folders)
