icon16dir = $(datadir)/icons/hicolor/16x16/apps/
icon16_DATA = 16x16/gnome-aisleriot.png \
16x16/gnome-blackjack.png \
16x16/gnome-freecell.png \
16x16/gnome-glchess.png \
16x16/gnome-glines.png \
16x16/gnome-gnect.png \
16x16/gnome-gnibbles.png \
16x16/gnome-gnometris.png \
16x16/gnome-iagno.png \
16x16/gnome-klotski.png \
16x16/gnome-mahjongg.png \
16x16/gnome-mines.png \
16x16/gnome-robots.png \
16x16/gnome-samegnome.png \
16x16/gnome-sudoku.png \
16x16/gnome-tali.png \
16x16/gnome-tetravex.png

icon22dir = $(datadir)/icons/hicolor/22x22/apps/
icon22_DATA = 22x22/gnome-aisleriot.png \
22x22/gnome-blackjack.png \
22x22/gnome-freecell.png \
22x22/gnome-glchess.png \
22x22/gnome-glines.png \
22x22/gnome-gnect.png \
22x22/gnome-gnibbles.png \
22x22/gnome-gnometris.png \
22x22/gnome-iagno.png \
22x22/gnome-klotski.png \
22x22/gnome-mahjongg.png \
22x22/gnome-mines.png \
22x22/gnome-robots.png \
22x22/gnome-samegnome.png \
22x22/gnome-sudoku.png \
22x22/gnome-tali.png \
22x22/gnome-tetravex.png

icon24dir = $(datadir)/icons/hicolor/24x24/apps/
icon24_DATA = 24x24/gnome-aisleriot.png \
24x24/gnome-blackjack.png \
24x24/gnome-freecell.png \
24x24/gnome-glchess.png \
24x24/gnome-glines.png \
24x24/gnome-gnect.png \
24x24/gnome-gnibbles.png \
24x24/gnome-gnometris.png \
24x24/gnome-iagno.png \
24x24/gnome-klotski.png \
24x24/gnome-mahjongg.png \
24x24/gnome-mines.png \
24x24/gnome-robots.png \
24x24/gnome-samegnome.png \
24x24/gnome-sudoku.png \
24x24/gnome-tali.png \
24x24/gnome-tetravex.png

icon32dir = $(datadir)/hicolor/32x32/apps/
icon32_DATA =32x32/gnome-aisleriot.png \
32x32/gnome-blackjack.png \
32x32/gnome-freecell.png \
32x32/gnome-glchess.png \
32x32/gnome-glines.png \
32x32/gnome-gnect.png \
32x32/gnome-gnibbles.png \
32x32/gnome-gnometris.png \
32x32/gnome-iagno.png \
32x32/gnome-klotski.png \
32x32/gnome-mahjongg.png \
32x32/gnome-mines.png \
32x32/gnome-robots.png \
32x32/gnome-samegnome.png \
32x32/gnome-sudoku.png \
32x32/gnome-tali.png \
32x32/gnome-tetravex.png

icon48dir = $(datadir)/icons/hicolor/48x48/apps/
icon48_DATA = 48x48/gnome-aisleriot.png \
48x48/gnome-blackjack.png \
48x48/gnome-freecell.png \
48x48/gnome-glchess.png \
48x48/gnome-glines.png \
48x48/gnome-gnect.png \
48x48/gnome-gnibbles.png \
48x48/gnome-gnometris.png \
48x48/gnome-iagno.png \
48x48/gnome-klotski.png \
48x48/gnome-mahjongg.png \
48x48/gnome-mines.png \
48x48/gnome-robots.png \
48x48/gnome-samegnome.png \
48x48/gnome-sudoku.png \
48x48/gnome-tali.png \
48x48/gnome-tetravex.png

svgicondir = $(datadir)/icons/hicolor/scalable/apps/
svgicon_DATA = scalable/gnome-aisleriot.svg \
scalable/gnome-blackjack.svg \
scalable/gnome-freecell.svg \
scalable/gnome-glchess.svg \
scalable/gnome-glines.svg \
scalable/gnome-gnect.svg \
scalable/gnome-gnibbles.svg \
scalable/gnome-gnometris.svg \
scalable/gnome-iagno.svg \
scalable/gnome-klotski.svg \
scalable/gnome-mines.svg \
scalable/gnome-robots.svg \
scalable/gnome-samegnome.svg \
scalable/gnome-sudoku.svg \
scalable/gnome-tali.svg \
scalable/gnome-tetravex.svg
