NULL =

public_icons_themes = hicolor

dist_noinst_DATA =

if BUILD_AISLERIOT
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-aisleriot.png \
	$(NULL)

if HAVE_HILDON

# These sizes work for maemo3 at least. The "scalable" icon really
# is a 64x54 icon, which is the size that apparently is required for
# the app menu on maemo3.
#
# FIXME: check which sizes are required on maemo4 and maemo5

dist_noinst_DATA += \
	hicolor_apps_34x34_gnome-aisleriot.png \
	hicolor_apps_26x26_gnome-aisleriot.png \
	hicolor_apps_40x40_gnome-aisleriot.png \
	hicolor_apps_50x50_gnome-aisleriot.png \
	hicolor_apps_scalable_gnome-aisleriot.png \
	$(NULL)
else
dist_noinst_DATA += \
	hicolor_apps_22x22_gnome-aisleriot.png \
	hicolor_apps_24x24_gnome-aisleriot.png \
	hicolor_apps_32x32_gnome-aisleriot.png \
	hicolor_apps_48x48_gnome-aisleriot.png \
	hicolor_apps_scalable_gnome-aisleriot.svg \
	hicolor_apps_16x16_gnome-freecell.png \
	hicolor_apps_22x22_gnome-freecell.png \
	hicolor_apps_24x24_gnome-freecell.png \
	hicolor_apps_32x32_gnome-freecell.png \
	hicolor_apps_48x48_gnome-freecell.png \
	hicolor_apps_scalable_gnome-freecell.svg \
	$(NULL)
endif # HAVE_HILDON

endif # BUILD_AISLERIOT

if BUILD_BLACKJACK
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-blackjack.png \
	hicolor_apps_22x22_gnome-blackjack.png \
	hicolor_apps_24x24_gnome-blackjack.png \
	hicolor_apps_32x32_gnome-blackjack.png \
	hicolor_apps_48x48_gnome-blackjack.png \
	hicolor_apps_scalable_gnome-blackjack.svg \
	$(NULL)
endif

if BUILD_GLCHESS
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-glchess.png \
	hicolor_apps_22x22_gnome-glchess.png \
	hicolor_apps_24x24_gnome-glchess.png \
	hicolor_apps_32x32_gnome-glchess.png \
	hicolor_apps_48x48_gnome-glchess.png \
	hicolor_apps_scalable_gnome-glchess.svg \
	$(NULL)
endif

if BUILD_GLINES
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-glines.png \
	hicolor_apps_22x22_gnome-glines.png \
	hicolor_apps_24x24_gnome-glines.png \
	hicolor_apps_32x32_gnome-glines.png \
	hicolor_apps_48x48_gnome-glines.png \
	hicolor_apps_scalable_gnome-glines.svg \
	$(NULL)
endif

if BUILD_GNECT
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-gnect.png \
	hicolor_apps_22x22_gnome-gnect.png \
	hicolor_apps_24x24_gnome-gnect.png \
	hicolor_apps_32x32_gnome-gnect.png \
	hicolor_apps_48x48_gnome-gnect.png \
	hicolor_apps_scalable_gnome-gnect.svg \
	$(NULL)
endif

if BUILD_GNIBBLES
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-gnibbles.png \
	hicolor_apps_22x22_gnome-gnibbles.png \
	hicolor_apps_24x24_gnome-gnibbles.png \
	hicolor_apps_32x32_gnome-gnibbles.png \
	hicolor_apps_48x48_gnome-gnibbles.png \
	hicolor_apps_scalable_gnome-gnibbles.svg \
	$(NULL)
endif

if BUILD_GNOBOTS2
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-robots.png \
	hicolor_apps_22x22_gnome-robots.png \
	hicolor_apps_24x24_gnome-robots.png \
	hicolor_apps_32x32_gnome-robots.png \
	hicolor_apps_48x48_gnome-robots.png \
	hicolor_apps_scalable_gnome-robots.svg \
	$(NULL)
endif

if BUILD_GNOME_SUDOKU
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-sudoku.png \
	hicolor_apps_22x22_gnome-sudoku.png \
	hicolor_apps_24x24_gnome-sudoku.png \
	hicolor_apps_32x32_gnome-sudoku.png \
	hicolor_apps_48x48_gnome-sudoku.png \
	hicolor_apps_scalable_gnome-sudoku.svg \
	$(NULL)
endif

if BUILD_GNOMETRIS
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-gnometris.png \
	hicolor_apps_22x22_gnome-gnometris.png \
	hicolor_apps_24x24_gnome-gnometris.png \
	hicolor_apps_32x32_gnome-gnometris.png \
	hicolor_apps_48x48_gnome-gnometris.png \
	hicolor_apps_scalable_gnome-gnometris.svg \
	$(NULL)
endif

if BUILD_GNOMINE
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-mines.png \
	hicolor_apps_22x22_gnome-mines.png \
	hicolor_apps_24x24_gnome-mines.png \
	hicolor_apps_32x32_gnome-mines.png \
	hicolor_apps_48x48_gnome-mines.png \
	hicolor_apps_scalable_gnome-mines.svg \
	$(NULL)
endif

if BUILD_GNOTRAVEX
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-tetravex.png \
	hicolor_apps_22x22_gnome-tetravex.png \
	hicolor_apps_24x24_gnome-tetravex.png \
	hicolor_apps_32x32_gnome-tetravex.png \
	hicolor_apps_48x48_gnome-tetravex.png \
	hicolor_apps_scalable_gnome-tetravex.svg \
	$(NULL)
endif

if BUILD_GNOTSKI
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-klotski.png \
	hicolor_apps_22x22_gnome-klotski.png \
	hicolor_apps_24x24_gnome-klotski.png \
	hicolor_apps_32x32_gnome-klotski.png \
	hicolor_apps_48x48_gnome-klotski.png \
	hicolor_apps_scalable_gnome-klotski.svg \
	$(NULL)
endif

if BUILD_GTALI
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-tali.png \
	hicolor_apps_22x22_gnome-tali.png \
	hicolor_apps_24x24_gnome-tali.png \
	hicolor_apps_32x32_gnome-tali.png \
	hicolor_apps_48x48_gnome-tali.png \
	hicolor_apps_scalable_gnome-tali.svg \
	$(NULL)
endif

if BUILD_IAGNO
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-iagno.png \
	hicolor_apps_22x22_gnome-iagno.png \
	hicolor_apps_24x24_gnome-iagno.png \
	hicolor_apps_32x32_gnome-iagno.png \
	hicolor_apps_48x48_gnome-iagno.png \
	hicolor_apps_scalable_gnome-iagno.svg \
	$(NULL)
endif

if BUILD_LIGHTSOFF
dist_noinst_DATA += \
	hicolor_apps_scalable_gnome-lightsoff.svg \
	$(NULL)
endif

if BUILD_MAHJONGG
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-mahjongg.png \
	hicolor_apps_22x22_gnome-mahjongg.png \
	hicolor_apps_24x24_gnome-mahjongg.png \
	hicolor_apps_32x32_gnome-mahjongg.png \
	hicolor_apps_48x48_gnome-mahjongg.png \
	hicolor_apps_scalable_gnome-mahjongg.svg \
	$(NULL)
endif

if BUILD_SAME_GNOME
dist_noinst_DATA += \
	hicolor_apps_16x16_gnome-samegnome.png \
	hicolor_apps_22x22_gnome-samegnome.png \
	hicolor_apps_24x24_gnome-samegnome.png \
	hicolor_apps_32x32_gnome-samegnome.png \
	hicolor_apps_48x48_gnome-samegnome.png \
	hicolor_apps_scalable_gnome-samegnome.svg \
	$(NULL)
endif

private_icons = \
	hicolor_actions_16x16_cards-deal.png \
	hicolor_actions_22x22_cards-deal.png \
	hicolor_actions_24x24_cards-deal.png \
	hicolor_actions_32x32_cards-deal.png \
	hicolor_actions_48x48_cards-deal.png \
	hicolor_actions_scalable_cards-deal.svg \
	$(NULL)

if BUILD_GNOBOTS2
if !HAVE_HILDON
private_icons += \
	hicolor_actions_24x24_teleport.png \
	hicolor_actions_24x24_teleport-random.png \
	$(NULL)
endif # !HAVE_HILDON
endif # BUILD_GNOBOTS2

EXTRA_DIST = \
	$(private_icons)\
	$(NULL)

# The extra treatment for Hildon is necessary because hildon only looks for
# icons in the "hildon" context [https://bugs.maemo.org/show_bug.cgi?id=4766].

install-public-icons:
	for icon in $(dist_noinst_DATA); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		$(mkdir_p) $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-public-icons:
	-for icon in $(dist_noinst_DATA); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-data-local: install-public-icons install-private-icons
uninstall-local: uninstall-public-icons uninstall-private-icons

install-data-hook: update-icon-cache
uninstall-hook: update-icon-cache

gtk_update_icon_cache = gtk-update-icon-cache -f -t

update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		for theme in $(public_icons_themes); do \
			$(gtk_update_icon_cache) $(datadir)/icons/$$theme; \
		done; \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		for theme in $(public_icons_themes); do \
			echo "***   $(gtk_update_icon_cache) $(datadir)/icons/$$theme"; \
		done; \
	fi
